# phoeg

./: .gitignore  HOWTOEXPORT.md  Makefile  README  README.md  bootstrap  configure.ac
geng-mods/: Makefile  pruners.c
src/: Makefile  Makefile.am  buildinvs.sh  coloringProblem.hpp  dbpopinvs.sh  graph.hpp  graph6.cpp  graph6.hpp  graphFeatures.hpp  graphGeneration.hpp  invariants.hpp  keepbest.py  main.cpp  maintest.cpp  maximumIndependentSetProblem.hpp  minimalIncluded.hpp  minimumVertexCoverProblem.hpp  morphisms.hpp  nauty.h  nautyInterface.hpp  nauty_interface.hpp  output_inv.cpp  output_inv_mono.cpp  output_nc_inc_rot.cpp  rhochi.cpp  test.cpp  testNauty.cpp  testsBoost.cpp  transformations.hpp  updatedb_invtable.sh  vf2_sub_graph_iso.hpp
src/Minisat/: Main.cpp  Makefile  Solver.cpp
src/Minisat/example/: h1  h2  h3  hard  otherexample  superevil  veryeasy  worldhardest2
src/Minisat/example/16/: evil16
src/Minisat/example/25/: grid1  grid25-1
src/Minisat/example/9/: eastermonster  easy  evil  medium  worldhardest
src/pgphoeg/: Makefile  dbquery.pgc  pgphoeg.c
